--- a/client/matches.html
+++ b/client/matches.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Scrumble</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" type="text/css" href="styles/base.css">
     <link rel="stylesheet" href="styles/menu.css">
-    <link rel="stylesheet" href="styles/menu.css">
+    <link rel="stylesheet" href="styles/style2.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://code.angularjs.org/1.4.3/angular.js"></script>
     <script src="js/app.js"></script>
     <script src="js/factories/listingFactory.js"></script>
@@ -19,23 +23,20 @@
       <a href= "/mentees"> Mentee Requests </a>
       <a href= "/matches" class="active"> Mentor Matches </a>
       <a href= "/logout"> Log Out </a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
     </div>
     <div class="container">
-      <div class="row">
-
-      </div>
-      <div class="row" ng-controller="ListingsController">
 
       <!--  <div class="col-md-6"> -->
       <div class="span-12 omega">
-          <h1 style="margin-left:40%">Your Potential Mentors</h1>
+          <h1 style="text-align:center">Your Potential Mentors</h1>
+          <div ng-if="errors.length > 0" style=" width: 100%; font-size: 15px">
+                <p ng-repeat="error in errors" style=" font-family: Arial">{{error}}</p>
+          </div>
           <div class="input-group" id="searchBar">
             <span class="input-group-addon" id="sizing-addon1"><span class="glyphicon glyphicon-search"></span></span>
             <input type="text" class="form-control" placeholder="Search" ng-model="query">
           </div>
-		  	<div ng-if="errors.length > 0" style=" width: 100%;">
-				<p ng-repeat="error in errors" style=" font-family: Arial">{{error}}</p>
-			</div>
           <div class="tableWrapper">
             <table class="table table-striped table-hover">
               <tr>
@@ -70,5 +71,6 @@
       }
     }
     </script>
+  </div>
   </body>
 </html>
