--- a/client/signup.html
+++ b/client/signup.html
@@ -60,8 +60,8 @@
   <option selected disabled> </option>
   <option value="Male">Male</option>
   <option value="Female">Female</option>
-  <option value="Nonbinary"> Non-binary </option>
-  <option value="Nopreferance">I prefer not to answer</option>
+  <option value="Non-binary"> Non-binary </option>
+  <option value="I prefer not to answer">I prefer not to answer</option>
   </select>
 </div>
 <br>
