--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,17 @@
 	<link rel="stylesheet" type="text/css" href="styles/main.css">
 	<link rel="stylesheet" type="text/css" href="styles/base.css">
 </head>
+<style type="text/css">
+	.leftside{
+		background-image: url(https://i.imgur.com/BUid57i.jpg);
+		text-shadow rgba(0, 0, 0, 0.7) 1px 0 10px;
+	}
+  @media screen and (max-width: 800px) {
+    #equal{
+      flex-direction: column !important;
+    }
+  }
+</style>
   <body ng-app="directoryApp">
 	<div ng-controller="ListingsController">
 	<div class= "col-container" id="equal">
