--- a/client/requests.html
+++ b/client/requests.html
@@ -45,8 +45,7 @@
               <tr ng-repeat="mentee in mentees | filter: { code: query }">
                 <td>{{mentee.mentee_name}}</td>
                 <td><a ng-click="viewOtherUser(mentee.mentee_name,mentee.status)">View Profile</a></td>
-				<td ng-if="mentee.status == 'pending'"><button ng-click=acceptRequest(mentee._id)>Accept</button></td>
-				<td ng-if="mentee.status == 'pending'"><button ng-click=rejectRequest(mentee._id)>Reject</button></td>
+				<td ng-if="mentee.status == 'pending'"><button ng-click=acceptRequest(mentee._id)>Accept</button><button ng-click=rejectRequest(mentee._id) style="margin-left: 20px;">Reject</button></td>
                 <td ng-if="mentee.status == 'accepted'">Accepted</td>
 				<td ng-if="mentee.status == 'rejected'">Rejected</td>
               </tr>
