--- a/client/profile.html
+++ b/client/profile.html
@@ -2,49 +2,49 @@
 <html>
 <head>
   <title>Scrumble</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles/style.css">
 	<link rel="stylesheet" type="text/css" href="styles/base.css">
   <link rel="stylesheet" href="styles/menu.css">
   <link rel="stylesheet" href="styles/style2.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://code.angularjs.org/1.4.3/angular.js"></script>
+  <link rel="stylesheet" href="https//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https//code.angularjs.org/1.4.3/angular.js"></script>
     <script src="js/app.js"></script>
     <script src="js/factories/listingFactory.js"></script>
     <script src="js/controllers/listingController.js"></script>
 </head>
 <style type="text/css">
   .texts label{
-    text-align: left !important;
-    width: 100%;
+    text-align left !important;
+    width 100%;
   }
   textarea{
-  width: 100%;
-  height: 100px;
-  padding: 12px 20px;
-  box-sizing: border-box;
-  border: 2px solid #ccc;
-  border-radius: 4px;
-  background-color: #f8f8f8;
-  resize: none;
+  width 100%;
+  height 100px;
+  padding 12px 20px;
+  box-sizing border-box;
+  border 2px solid #ccc;
+  border-radius 4px;
+  background-color #f8f8f8;
+  resize none;
   }
   input,textarea,select{
-    font-size: 13px;
+    font-size 13px;
   }
   select, input[type="text"]{
-    width: 100%;
+    width 100%;
   }
 
   h4{
-    width: 100%;
-    text-align: left;
+    width 100%;
+    text-align left;
   }
   .span-12 button{
-    float: right;
-    clear: both;
+    float right;
+    clear both;
   }
   img{
-    width: 100%;
+    width 100%;
   }
 </style>
  <body ng-app="directoryApp">
@@ -57,17 +57,17 @@
       <a href= "/mentees"> Mentee Requests </a>
       <a href= "/matches"> Mentor Matches </a>
       <a href= "/logout"> Log Out </a>
-	  <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
+	  <a href="javascriptvoid(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
     </div>
-    <div class="container main-page">
-  <form style = "margin-top: 10px; margin-left: 20px;">
+    <div cwe->
+  <form style = "margin-top 10px; margin-left 20px;">
 
 <h1>Edit Your Profile</h1>
-<div class="span-12 omega" style="margin: 0; padding: 0;">
+<div class="span-12 omega" style="margin 0; padding 0;">
 <button ng-click="profileUpdate()"> Update </button>
 </div>
-<div class = "span-4" style="text-align: left !important">
-<img src = "https://i.ibb.co/ZKVGWpD/scrumblelogo-Final.png">
+<div class = "span-4" style="text-align left !important">
+<img src = "https//i.ibb.co/ZKVGWpD/scrumblelogo-Final.png">
 </div>
 
 <div class= "span-4 texts">
@@ -117,33 +117,33 @@
   <div class="span-4 omega">
      <h4>Scrumble Settings</h4>
   <div>
- <p style="padding-right: 10px;">
+ <p style="padding-right 10px;">
   <label class="bold">
    Are you available?
  </label>
    </p>
-   <label class="checkboxContainer" style="font-size:14px !important">Yes
+   <label class="checkboxContainer" style="font-size14px !important">Yes
  <input type="radio" name="mentor" ng-model="userProfile.available" value="true" ng-value="true">
- <span class="checkmark" style="left: 35px !important";></span>
+ <span class="checkmark" style="left 35px !important";></span>
 </label>
- <label class="checkboxContainer" style="font-size:14px !important">No
+ <label class="checkboxContainer" style="font-size14px !important">No
  <input type="radio" name="mentee"ng-model="userProfile.available" value="false" ng-value="false">
- <span class="checkmark" style="left: 35px !important";></span>
+ <span class="checkmark" style="left 35px !important";></span>
 </div>
 
 <div>
- <p style="padding-right: 10px;">
+ <p style="padding-right 10px;">
   <label class="bold">
    I am a
  </label>
    </p>
-   <label class="checkboxContainer" style="font-size:14px !important">Mentor
+   <label class="checkboxContainer" style="font-size14px !important">Mentor
  <input type="checkbox" name="mentor" value="Mentor" value="true" ng-model="userProfile.usertype.mentor" ng-checked="userProfile.usertype.mentor">
- <span class="checkmark" style="left: 35px !important";></span>
+ <span class="checkmark" style="left 35px !important";></span>
 </label>
- <label class="checkboxContainer" style="font-size:14px !important">Mentee
+ <label class="checkboxContainer" style="font-size14px !important">Mentee
  <input type="checkbox" name="mentee" value="Mentee" value="true" ng-model="userProfile.usertype.mentee" ng-checked="userProfile.usertype.mentee">
- <span class="checkmark" style="left: 35px !important";></span>
+ <span class="checkmark" style="left 35px !important";></span>
 </label>
 </div>
 </div>
@@ -187,7 +187,7 @@
   </div>
 </div>
 
-<div class= "span-3" style="text-align:left !important">
+<div class= "span-3" style="text-alignleft !important">
 <div>
   <p>
     <label class="bold">
@@ -204,7 +204,7 @@
 </div>
 </div>
 
-<div class= "span-3 omega" style="text-align:left !important">
+<div class= "span-3 omega" style="text-alignleft !important">
 <div>
   <p>
     <label class="bold">
@@ -216,72 +216,72 @@
 </div>
 </div>
 
-<div class= "span-6" style="text-align:left !important">
+<div class= "span-6" style="text-alignleft !important">
 <div>
- <p style="padding-right: 10px;">
+ <p style="padding-right 10px;">
    <label class="bold">
      How Would You Like to Meet?
    </label>
   </p>
-  <label class="checkboxContainer" style="left: 30px; font-size:14px !important";>
+  <label class="checkboxContainer" style="left 30px; font-size14px !important";>
     <input type="checkbox" name="communication[]" value="In Person" ng-click="addComm('In Person')" ng-checked="comm.indexOf('In Person')>-1">In Person
-<span class="checkmark" style="left: -30px !important";></span>
+<span class="checkmark" style="left -30px !important";></span>
   </label>
-  <label class="checkboxContainer" style="left: 30px; font-size:14px !important";>Video Call
+  <label class="checkboxContainer" style="left 30px; font-size14px !important";>Video Call
     <input type="checkbox" name="communication[]" value="Video Call" ng-click="addComm('Video Call')" ng-checked="comm.indexOf('Video Call')>-1">
-<span class="checkmark" style="left: -30px !important";></span>
+<span class="checkmark" style="left -30px !important";></span>
   </label>
-  <label class="checkboxContainer" style="left: 30px; font-size:14px !important";>Phone Call
+  <label class="checkboxContainer" style="left 30px; font-size14px !important";>Phone Call
     <input type="checkbox" name="communication[]" value="Phone Call" ng-click="addComm('Phone Call')" ng-checked="comm.indexOf('Phone Call')>-1">
-<span class="checkmark" style="left: -30px !important";></span>
+<span class="checkmark" style="left -30px !important";></span>
   </label>
-  <label class="checkboxContainer" style="left: 30px; font-size:14px !important";>Text Message
+  <label class="checkboxContainer" style="left 30px; font-size14px !important";>Text Message
     <input type="checkbox" value="Text Message" ng-click="addComm('Text Message')" ng-checked="comm.indexOf('Text Message')>-1">
-<span class="checkmark" style="left: -30px !important";></span>
+<span class="checkmark" style="left -30px !important";></span>
   </label>
-  <label class="checkboxContainer" style="left: 30px; font-size:14px !important";>Email
+  <label class="checkboxContainer" style="left 30px; font-size14px !important";>Email
     <input type="checkbox" name="communication[]" value="Email" ng-click="addComm('Email')" ng-checked="comm.indexOf('Email')>-1">
-<span class="checkmark" style="left: -30px !important";></span>
+<span class="checkmark" style="left -30px !important";></span>
   </label>
 </div>
 </div>
 
-<div class= "span-6 omega" style="text-align:left !important";>
+<div class= "span-6 omega" style="text-alignleft !important";>
 <div>
- <p style="padding-right: 10px;">
+ <p style="padding-right 10px;">
    <label class="bold">
      When Are You Normally Available?
    </label>
  </p>
- <label class="checkboxContainer" style="left:30px; font-size:14px !important">Early Morning
+ <label class="checkboxContainer" style="left30px; font-size14px !important">Early Morning
    <input type="checkbox" value="Early Morning" ng-click="addTime('Early Morning')" ng-checked="time.indexOf('Early Morning')>-1">
-<span class="checkmark" style="left: -30px !important"></span>
+<span class="checkmark" style="left -30px !important"></span>
  </label>
-<label class="checkboxContainer" style="left:30px; font-size:14px !important">Late Morning
+<label class="checkboxContainer" style="left30px; font-size14px !important">Late Morning
   <input type="checkbox" value="Late Morning" ng-click="addTime('Late Morning')" ng-checked="time.indexOf('Late Morning')>-1">
-<span class="checkmark" style="left: -30px !important"></span>
+<span class="checkmark" style="left -30px !important"></span>
 </label>
-<label class="checkboxContainer" style="left:30px; font-size:14px !important">Early Afternoon
+<label class="checkboxContainer" style="left30px; font-size14px !important">Early Afternoon
   <input type="checkbox" value="Early Afternoon" ng-click="addTime('Early Afternoon')" ng-checked="time.indexOf('Early Afternoon')>-1">
-<span class="checkmark" style="left: -30px !important"></span>
+<span class="checkmark" style="left -30px !important"></span>
 </label>
-<label class="checkboxContainer" style="left:30px; font-size:14px !important">Late Afternoon
+<label class="checkboxContainer" style="left30px; font-size14px !important">Late Afternoon
   <input type="checkbox" nvalue="Late Afternoon" ng-click="addTime('Late Afternoon')" ng-checked="time.indexOf('Late Afternoon')>-1">
-  <span class="checkmark" style="left:-30px !important"></span>
+  <span class="checkmark" style="left-30px !important"></span>
 </label>
-<label class="checkboxContainer" style="left:30px; font-size:14px !important">Early Evening
+<label class="checkboxContainer" style="left30px; font-size14px !important">Early Evening
   <input type="checkbox" value="Early Evening" ng-click="addTime('Early Evening')" ng-checked="time.indexOf('Early Evening')>-1">
-<span class="checkmark" style="left: -30px !important"></span>
+<span class="checkmark" style="left -30px !important"></span>
 </label>
-<label class="checkboxContainer" style="left:30px; font-size:14px !important">Late Evening
+<label class="checkboxContainer" style="left30px; font-size14px !important">Late Evening
   <input type="checkbox" ng-click="addTime('Late Evening')" ng-checked="time.indexOf('Late Evening')>-1">
-<span class="checkmark" style="left: -30px !important"></span>
+<span class="checkmark" style="left -30px !important"></span>
 </label>
 </div>
 </div>
 <div class="span-12 omega texts" >
   <label class="bold">
-  Goals For Scrumble:
+  Goals For Scrumble
 </label>
 <div>
  <textarea name="about"  ng-model="userProfile.scrumble_goals"></textarea>
@@ -289,7 +289,7 @@
 <br>
 
 <label class="bold">
-Career Goals:
+Career Goals
 </label>
 <div>
 <textarea name="careerGoals" ng-model="userProfile.career_goals"></textarea>
@@ -297,7 +297,7 @@ Career Goals:
 <br>
 
 <label class="bold">
-Industry Experiences:
+Industry Experiences
 </label>
 <div>
 <textarea name="experiences" ng-model="userProfile.industry_exp"></textarea>
@@ -305,7 +305,7 @@ Industry Experiences:
 <br>
 
 <label class="bold">
-Strengths in Field of Interest:
+Strengths in Field of Interest
 </label>
 <div>
 <textarea name="strengths" ng-model="userProfile.strengths"></textarea>
@@ -313,7 +313,7 @@ Strengths in Field of Interest:
 <br>
 
 <label class="bold">
-Current Occupation:
+Current Occupation
 </label>
 <div>
 <textarea name="currentJob"  ng-model="userProfile.occupation"></textarea>
@@ -321,7 +321,7 @@ Current Occupation:
 <br>
 
 <label class="bold">
-Anything Interesting You Would Like to Add:
+Anything Interesting You Would Like to Add
 </label>
 <div>
 <textarea name="miscellaneous" ng-model="userProfile.add_info"></textarea>
