--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
 <style type="text/css">
 	.leftside{
 		background-image: url(https://i.imgur.com/BUid57i.jpg);
-		text-shadow rgba(0, 0, 0, 0.7) 1px 0 10px;
+		text-shadow: rgba(0, 0, 0, 0.7) 1px 0 10px;
 	}
   @media screen and (max-width: 800px) {
     #equal{
