--- a/client/google.html
+++ b/client/google.html
@@ -100,7 +100,7 @@
 </div>
 </div>
 <div class="clear">
-  <button ng-click="signUp()"> Submit</button>
+  <button ng-click="googleRegister()"> Submit</button>
 </div>
 </form>
 </div>
