Updated Table Styles

--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -19,6 +19,7 @@
     width: 100%;
     flex-direction: row;
     text-shadow: rgba(0, 0, 0, 0.7) 1px 0 10px;
+	margin-bottom: 30px;
   }
   .features .span-3{
     color: white;
