--- a/client/requests.html
+++ b/client/requests.html
@@ -13,6 +13,15 @@
     <script src="js/factories/listingFactory.js"></script>
     <script src="js/controllers/listingController.js"></script>
 </head>
+<style>
+	td{
+		font-size: 15px;
+	}
+	
+	button{
+		margin: 0;
+	}
+</style>
  <body ng-app="directoryApp">
   <div ng-controller="ListingsController" data-ng-init="getMentees()">
   <div class="row ">
