--- a/client/requests.html
+++ b/client/requests.html
@@ -14,12 +14,21 @@
     <script src="js/controllers/listingController.js"></script>
 </head>
 <style>
+	th{
+		font-size: 17px;
+	}
 	td{
-		font-size: 15px;
+		font-size: 14px;
+		text-align: left;
 	}
 	
 	button{
 		margin: 0;
+	}
+	
+	td a{
+		color: green;
+		text-decoration: underline;
 	}
 </style>
  <body ng-app="directoryApp">
