--- a/client/requests.html
+++ b/client/requests.html
@@ -59,7 +59,7 @@
                 <th>View Profile</th>
                 <th>Status</th>
               </tr>
-			  <tr ng-if="!mentees"><td colspan="3" style="text-align:center">No new mentee requests.</td></tr>
+			  <tr ng-if="!mentees || mentees.length == 0"><td colspan="3" style="text-align:center">No new mentee requests.</td></tr>
               <tr ng-repeat="mentee in mentees | filter: { code: query }">
                 <td>{{mentee.mentee_name}}</td>
                 <td><a ng-click="viewOtherUser(mentee.mentee_name,mentee.status)">View Profile</a></td>
