--- a/client/google.html
+++ b/client/google.html
@@ -38,7 +38,7 @@
   }
 </style>
   <body ng-app="directoryApp">
-	<div ng-controller="ListingsController" data-ng-init="checkGoogle()">
+	<div ng-controller="ListingsController">
   <div class="row ">
         <div class="container main-page">
           <div style="width: 100%">
